# eye-processing

./: .buildinfo  .gitignore  LICENSE  README.md  about.html  genindex.html  index.html  license.html  objects.inv  preprocessing.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: about.doctree  environment.pickle  index.doctree  license.doctree  preprocessing.doctree  usage.doctree
.doctrees/notebooks/: tutorial_parse_eyelink.doctree
.github/workflows/: documentation.yml
_sources/: about.md.txt  preprocessing.md.txt
docs/: about.md  citations.bib  conf.py  index.html  index.md  license.md  reference.md  usage.md
docs/notebooks/: tutorial.ipynb  tutorial_parse_eyelink.ipynb
notebooks/: tutorial_parse_eyelink.html
src/eye_processing/: __init__.py  __main__.py
src/eye_processing/data/: mono500.asc
tests/: __init__.py  test_main.py
